# PokemonCPP

./: .gitignore  CMakeLists.txt  PokemonC.c  README.md
script/: a.out  fire.txt  hospital.txt  main.cpp  main.py  plant.txt  test.py  tmp.txt  water.txt  world.txt
src/: constants.h  constants.hpp  main.c  main.cpp
src/ecs/: ComponentArray.cpp  ComponentArray.hpp  ComponentManager.hpp  ECS.hpp  EcsManager.hpp  EntityManager.cpp  EntityManager.hpp  System.cpp  System.hpp  SystemManager.hpp  camera.c  camera.h  component_manager.c  component_manager.h  components.c  components.h  components.hpp  ecs.c  ecs.h  ecs_manager.c  ecs_manager.h  entity_manager.c  entity_manager.h  sprite_animation.c  system.c  system.h  system_character.c  system_coast.c  system_manager.c  system_manager.h  system_movement.c  system_player.c  system_sprite.c  system_sprite.h  system_sprite_animation.c  system_sprite_animation.h  system_transition.c  system_water.c  transition.h
src/ecs/component/: ComponentArray.hpp  ComponentManager.hpp  components.hpp
src/ecs/entity/: EntityManager.hpp
src/ecs/system/: System.hpp  SystemManager.hpp  SystemPlayer.cpp  SystemSprite.cpp  SystemSpriteAnimation.cpp  SystemTransition.cpp  SystemWater.cpp
src/resources/data/maps/: Coast tilseset.tsx  fire.tmx  fire.txt  hospital.tmx  hospital.txt  house.tmx  house.txt  main-world.tmx  plant.tmx  plant.txt  water.tmx  water.txt  world.tmx  world.txt
src/resources/data/tilesets/: coast.tsx  objects.tsx  pokemon-tileset.tsx
src/scene/: FireArena.cpp  Hospital.cpp  House.cpp  PlantArena.cpp  Scene.cpp  Scene.hpp  SceneID.hpp  SceneManager.cpp  TestScene.cpp  TestScene1.cpp  TestScene2.cpp  TitleScreen.cpp  WaterArena.cpp  World.cpp  fire_arena.c  hospital.c  house.c  plant_arena.c  scene.c  scene.h  scene_id.h  test_scene.c  test_scene_1.c  test_scene_2.c  test_scene_3.c  title_screen.c  water_arena.c  world.c
src/shaders/: ShaderPool.cpp  ShaderPool.h  WaterShader.cpp  WaterShader.hpp
src/util/: Camera.cpp  Camera.hpp  CharacterID.h  ObjectGroupID.h  ObjectID.h  TexturePool.cpp  TexturePool.hpp  TiledMap.cpp  TiledMap.h  avl_tree.c  avl_tree.h  camera.c  camera.h  config.c  config.h  debug.c  debug.h  entity_pair.c  entity_pair.h  globals.c  globals.h  hash.c  hash.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  iterator.h  map.c  map.h  map_info.h  query.h  resource.h  scene_id.h  set.c  set.h  texture_pool.c  texture_pool.h  tile.h  tiled_map.c  (+11 more)
